# fetcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fetcher/: main.py
src/fetcher/lib/: defs.py  file.py  http.py  misc.py  shell.py
